서브모듈 변경 사항 커밋

--- a/board/list.html
+++ b/board/list.html
@@ -39,7 +39,9 @@
     }
 
     .home-btn,
-    .write-btn {
+    .write-btn {git remote -v
+
+      
       text-decoration: none;
       padding: 10px 15px;
       border-radius: 6px;
