--- a/board/write.html
+++ b/board/write.html
@@ -93,11 +93,12 @@
         padding: 20px;
       }
     }
+    
   </style>
 </head>
 <body>
-
   <div class="container">
+     <a href="../main.html" class="home-btn">🏠 홈</a>
     <h1>✍️ 글 작성</h1>
     <form id="postForm">
       <label for="title">제목</label>
