--- a/main.html
+++ b/main.html
@@ -86,8 +86,8 @@
   <nav>
     <a href="board/write.html">글 작성</a>
     <a href="board/list.html">게시판</a>
-    <a href="member/signup.html">가입하기</a>
     <a href="member/user-management.html">회원관리</a>
+    <a href="member/login.html">로그인</a>
   </nav>
 
   <div class="main-content">
