admin / 1234 관리자 강제추가 및 디자인변경

--- a/member/login.html
+++ b/member/login.html
@@ -20,6 +20,40 @@
     const password = document.getElementById("password").value.trim();
     const users = JSON.parse(localStorage.getItem('users')) || [];
 
+     // ✅ 관리자 강제 로그인 처리
+  if (username === "admin" && password === "1234") {
+    // admin 계정을 localStorage에 등록 (없을 경우)
+    let adminUser = users.find(u => u.username === "admin");
+
+    if (!adminUser) {
+      adminUser = {
+        username: "admin",
+        password: "1234",
+        isAdmin: true,
+        approved: true
+      };
+      users.push(adminUser);
+      localStorage.setItem('users', JSON.stringify(users));
+    } else {
+      // 기존 admin 계정이 있다면 isAdmin과 approved 강제 부여
+      adminUser.isAdmin = true;
+      adminUser.approved = true;
+      localStorage.setItem('users', JSON.stringify(users));
+    }
+
+    // 세션에 로그인 정보 저장
+    sessionStorage.setItem('loggedInUser', "admin");
+
+    alert("관리자(admin)로 로그인되었습니다.");
+
+    // 로그인 후 UI 업데이트 및 페이지 이동
+    if (typeof updateLoginStatus === 'function') updateLoginStatus();
+    if (typeof loadPage === 'function') loadPage('board/list.html');
+    else location.href = '../board/list.html';
+
+    return;
+  }
+
     // 승인된 사용자만 로그인 가능
     const user = users.find(u => u.username === username && u.password === password && u.approved === true);
 
