--- a/member/signup.html
+++ b/member/signup.html
@@ -1,3 +1,73 @@
+<style>
+ .form-container {
+    max-width: 400px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 30px 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-container h2 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #333;
+  }
+
+  form label {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    color: #333;
+  }
+
+  form input,
+  form select {
+    width: 100%;
+    padding: 10px 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    box-sizing: border-box;
+    transition: border-color 0.3s;
+  }
+
+  form input:focus,
+  form select:focus {
+    border-color: #4CAF50;
+    outline: none;
+  }
+
+  button[type="submit"] {
+    width: 100%;
+    padding: 12px;
+    margin-top: 25px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  button[type="submit"]:hover {
+    background-color: #45a049;
+  }
+
+  .success {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  @media (max-width: 480px) {
+    .form-container {
+      padding: 20px;
+      margin: 20px;
+    }
+  }
+</style>
 <div class="form-container">
   <h2>회원가입</h2>
   <form id="signupForm">
