커서AI를 이용한 디자인및 수정

--- a/member/user-management.html
+++ b/member/user-management.html
@@ -22,8 +22,8 @@
   /* 각 열별 너비 조절 */
   th:nth-child(1), td:nth-child(1) { width: 12%; } /* 이름 */
   th:nth-child(2), td:nth-child(2) { width: 10%; } /* 아이디 */
-  th:nth-child(3), td:nth-child(3) { width: 5%; }  /* 나이 */
-  th:nth-child(4), td:nth-child(4) { width: 6%; }  /* 성별 */
+  th:nth-child(3), td:nth-child(3) { width: 8%; }  /* 나이 */
+  th:nth-child(4), td:nth-child(4) { width: 10%; }  /* 성별 */
   th:nth-child(5), td:nth-child(5) { width: 15%; } /* 전화번호 */
   th:nth-child(6), td:nth-child(6) { width: 20%; } /* 이메일 */
   th:nth-child(7), td:nth-child(7) { width: 6%; }  /* 승인 */
@@ -34,9 +34,9 @@ input[type="number"],
 input[type="tel"],
 input[type="email"],
 select {
-  width: 95%; /* 약간 넓게 */
+  width: 100%;
   box-sizing: border-box;
-  min-width: 120px; /* 최소 너비 추가 */
+  
 }
 
 
