로그아웃, 글쓰기 버튼 고정

--- a/board/list.html
+++ b/board/list.html
@@ -20,7 +20,7 @@
     <input id="postSearch" type="text" placeholder="Search" style="flex:1; border:none; outline:none; font-size:14px; padding:6px;" />
   </div>
 
-  <button id="goToWrite" style="position:fixed; right:calc(50% - 450px); bottom:24px; padding:10px 16px; background:#343a40; color:#fff; border:none; border-radius:20px; cursor:pointer; box-shadow:0 2px 8px rgba(0,0,0,0.15);">글쓰기</button>
+  <button id="goToWrite" style="display:block; margin:16px 0 0 auto; padding:10px 16px; background:#343a40; color:#fff; border:none; border-radius:20px; cursor:pointer; box-shadow:0 2px 8px rgba(0,0,0,0.15);">글쓰기</button>
 </div>
 
 <script>
