--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
       }
     }
     .logout-btn {
-      position: fixed;
+      position: absolute;
       top: 15px;
       right: 15px;
       background-color: #dc3545;
