--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
       text-align: center;
       min-height: 400px;
       background: white;
-      max-width: 1000px;
+      max-width: 1400px;
       margin: 20px auto;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
@@ -87,6 +87,10 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: bold;
+    }
+
+    #table_div > tbody{
+
     }
   </style>
 </head>
@@ -229,7 +233,3 @@
 
 </body>
 </html>
-
-
-
-
